--- a/ch5.ipynb
+++ b/ch5.ipynb
@@ -506,7 +506,341 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": "ZeRO를 사용하면 SLI 환경에서 60분의1 수준으로 메모리를 줄일 수 있다.Transformer에서 Zero를 사용하는 방법은 Accelerate의 deepspeed guide를 참고한다.",
-   "id": "f2ed609e4935da70"
+   "id": "70a8d3c9dab14fe2"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-14T21:54:20.043201Z",
+     "start_time": "2024-10-14T21:54:20.019839Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "from peft import LoraConfig, get_peft_model\n",
+    "\n",
+    "def load_model_and_tokenizer(model_id, peft=None):\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+    "    \n",
+    "    if peft is None:\n",
+    "        model = AutoModelForCausalLM.from_pretrained(model_id, torch_dtype=\"auto\", device_map={\"\":0})\n",
+    "        \n",
+    "    elif peft == 'lora':\n",
+    "        model = AutoModelForCausalLM.from_pretrained(model_id, torch_dtype=\"auto\", device_map={\"\":0})\n",
+    "        \n",
+    "        lora_config = LoraConfig(\n",
+    "            r=8,\n",
+    "            lora_alpha=32,\n",
+    "            target_modules=[\"query_key_value\"],\n",
+    "            lora_dropout=0.05,\n",
+    "            bias=\"none\",\n",
+    "            task_type=\"CAUSAL_LM\",\n",
+    "        )\n",
+    "        \n",
+    "        model = get_peft_model(model, lora_config)\n",
+    "        model.print_trainable_parameters()\n",
+    "        \n",
+    "    print_gpu_utilization()\n",
+    "    return model, tokenizer"
+   ],
+   "id": "3eb70929e90cd13e",
+   "outputs": [],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-14T21:57:48.334350Z",
+     "start_time": "2024-10-14T21:56:07.585848Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "cleanup()\n",
+    "print_gpu_utilization()\n",
+    "\n",
+    "gpu_memory_experiment(batch_size=16, peft='lora')\n",
+    "\n",
+    "torch.cuda.empty_cache()"
+   ],
+   "id": "3ef9a5cfcb7935d2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU 메모리 사용량:  5.623 GB\n",
+      "배치 크기: 16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "a8cc08deddb64f3e9639626adc6499f9"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 1,572,864 || all params: 1,333,383,168 || trainable%: 0.11796039111242178\n",
+      "GPU 메모리 사용량:  8.224 GB\n",
+      "GPU 메모리 사용량:  10.339 GB\n",
+      "옵티마이저 상태의 메모리 사용량: 0.006 GB\n",
+      "그레디언트 메모리 사용량: 0.003 GB\n",
+      "옵티마이저 상태의 메모리 사용량: 0.006 GB\n",
+      "그레디언트 메모리 사용량: 0.003 GB\n",
+      "옵티마이저 상태의 메모리 사용량: 0.006 GB\n",
+      "그레디언트 메모리 사용량: 0.003 GB\n",
+      "옵티마이저 상태의 메모리 사용량: 0.006 GB\n",
+      "그레디언트 메모리 사용량: 0.003 GB\n",
+      "GPU 메모리 사용량:  5.623 GB\n"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T10:25:02.293952Z",
+     "start_time": "2024-10-15T10:25:02.283848Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "def quantile_normal(p):\n",
+    "    return norm.ppf(p)\n",
+    "\n",
+    "print(quantile_normal(0.5))\n",
+    "print(quantile_normal(0.6))"
+   ],
+   "id": "815b7aff05cad44c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.2533471031357997\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T11:28:55.458317Z",
+     "start_time": "2024-10-15T11:28:49.263056Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from transformers import BitsAndBytesConfig\n",
+    "\n",
+    "nf4_config = BitsAndBytesConfig(\n",
+    "    load_in_4bit=True,\n",
+    "    bnb_4bit_quant_type=\"nf4\",\n",
+    "    bnb_4bit_use_double_quant=True,\n",
+    "    bnb_4bit_compute_dtype=torch.bfloat16\n",
+    ")\n",
+    "\n",
+    "model_nf4 = AutoModelForCausalLM.from_pretrained(model_id, quantization_config=nf4_config)"
+   ],
+   "id": "8f67685ca3f03fb8",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`low_cpu_mem_usage` was None, now set to True since model is quantized.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "6f1421a78e3840f4b2002b9ccf2723a9"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T11:37:12.511791Z",
+     "start_time": "2024-10-15T11:37:12.503918Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig\n",
+    "from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
+    "\n",
+    "def load_model_and_tokenizer(model_id, peft=None):\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+    "    \n",
+    "    if peft is None:\n",
+    "        model = AutoModelForCausalLM.from_pretrained(model_id, torch_dtype=\"auto\", device_map={\"\":0})\n",
+    "    elif peft == 'lora':\n",
+    "        model = AutoModelForCausalLM.from_pretrained(model_id, torch_dtype=\"auto\", device_map={\"\":0})\n",
+    "        lora_config = LoraConfig(\n",
+    "            r=8,\n",
+    "            lora_alpha=32,\n",
+    "            target_modules=[\"query_key_value\"],\n",
+    "            lora_dropout=0.05,\n",
+    "            bias=\"none\",\n",
+    "            task_type='CAUSAL_LM'\n",
+    "        )\n",
+    "        \n",
+    "        model = get_peft_model(model, lora_config)\n",
+    "        model.print_trainable_parameters()\n",
+    "    elif peft == 'qlora':\n",
+    "        lora_config = LoraConfig(\n",
+    "            r=8,\n",
+    "            lora_alpha=32,\n",
+    "            target_modules=['query_key_value'],\n",
+    "            lora_dropout=0.05,\n",
+    "            bias='none',\n",
+    "            task_type='CAUSAL_LM'\n",
+    "        )\n",
+    "        \n",
+    "        bnb_config = BitsAndBytesConfig(\n",
+    "            load_in_4bit=True,\n",
+    "            bnb_4bit_use_double_quant=True,\n",
+    "            bnb_4bit_quant_type='nf4',\n",
+    "            bnb_4bit_compute_dtype=torch.float16\n",
+    "        )\n",
+    "        \n",
+    "        model = AutoModelForCausalLM.from_pretrained(model_id, quantization_config=bnb_config, device_map={\"\":0})\n",
+    "        model.gradient_checkpointing_enable()\n",
+    "        model = prepare_model_for_kbit_training(model)\n",
+    "        model = get_peft_model(model, lora_config)\n",
+    "        model.print_trainable_parameters()\n",
+    "        \n",
+    "        print_gpu_utilization()\n",
+    "        return model, tokenizer"
+   ],
+   "id": "7ea3d35f43f4d171",
+   "outputs": [],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-15T11:49:51.246007Z",
+     "start_time": "2024-10-15T11:37:36.392294Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "cleanup()\n",
+    "print_gpu_utilization()\n",
+    "\n",
+    "gpu_memory_experiment(batch_size=16, peft='qlora')\n",
+    "\n",
+    "torch.cuda.empty_cache()\n"
+   ],
+   "id": "b898da00e8da885b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU 메모리 사용량:  6.552 GB\n",
+      "배치 크기: 16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "3c472ced313f4132ba80cef4da42c988"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 1,572,864 || all params: 1,333,383,168 || trainable%: 0.11796039111242178\n",
+      "GPU 메모리 사용량:  7.719 GB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kmr34\\anaconda3\\Lib\\site-packages\\torch\\_dynamo\\eval_frame.py:600: UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "  return fn(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU 메모리 사용량:  8.258 GB\n",
+      "옵티마이저 상태의 메모리 사용량: 0.012 GB\n",
+      "그레디언트 메모리 사용량: 0.006 GB\n",
+      "옵티마이저 상태의 메모리 사용량: 0.012 GB\n",
+      "그레디언트 메모리 사용량: 0.006 GB\n",
+      "옵티마이저 상태의 메모리 사용량: 0.012 GB\n",
+      "그레디언트 메모리 사용량: 0.006 GB\n",
+      "옵티마이저 상태의 메모리 사용량: 0.012 GB\n",
+      "그레디언트 메모리 사용량: 0.006 GB\n",
+      "GPU 메모리 사용량:  6.552 GB\n"
+     ]
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "d3831b6c1650cc69"
   }
  ],
  "metadata": {
